# nvrdemo

./: LICENSE  Makefile.am  Makefile.in  README  Units.cpp  Units.h  bits.h  block_queue.cpp  block_queue.h  config.h  config.h.in  configure  configure.ac  data_reader.cpp  data_reader.h  data_transfer.cpp  data_transfer.h  data_writer.cpp  data_writer.h  device_manger.cpp  device_manger.h  http_manger.cpp  http_manger.h  mongoose.c  mongoose.h  nvr.cpp  nvr_device_mgr.cpp  nvr_device_mgr.h  sip_manger.cpp  sip_manger.h  sql_manger.cpp  sql_manger.h  video_data_manger.cpp  video_data_manger.h  video_manger.cpp  video_manger.h  video_stream_manger.cpp  video_stream_manger.h
conf/: nvr
conf/html/: index.html  login.html  new_index.html  test.html  upload.html
conf/html/resources/css/: style.css
conf/html/resources/images/: Thumbs.db
conf/html/resources/images/icons/: Thumbs.db
conf/html/resources/scripts/: nvr.js  simpla.jquery.configuration.js
conf/locale/zh_CN.UTF-8/LC_MESSAGES/: lang.mo  lang.po
include/: stdprj.h
